--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
   <!-- My CSS -->
   <link rel="stylesheet" href="css/style.css">
 
-  <title>Hefa Store</title>
+  <title></title>
 </head>
 
 <body>
